k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: pouchfi-backend
  namespace: staging
spec:
  selector:
    app: pouchfi-backend
  ports:
    - protocol: 'TCP'
      port: 3005
      targetPort: 3005
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pouchfi-backend
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pouchfi-backend
  template:
    metadata:
      labels:
        app: pouchfi-backend
    spec:
      containers:
        - name: pouchfi-backend
          image: thedumebi/pouchfi:latest
          imagePullPolicy: Always
          resources:
            # limits:
              # memory: "1Gi"
              # cpu: "500m"
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 3005
            periodSeconds: 10
            initialDelaySeconds: 10
          volumeMounts:
            - name: keys
              readOnly: true
              mountPath: /app/keys
            - name: pouchfi-uploads
              mountPath: /app/uploads
      volumes:
        - name: pouchfi-uploads
          persistentVolumeClaim:
            claimName: backend-pvc
        - name: keys
          secret:
            secretName: pouchfi-keys
