k8s/ingress-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: root-ingress
  # annotations:
  # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.pouchfi.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: robusta-grafana
                port:
                  number: 80
    - host: prometheus.pouchfi.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: robusta-kube-prometheus-st-prometheus
                port:
                  number: 9090
    - host: alerts.pouchfi.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: robusta-kube-prometheus-st-alertmanager
                port:
                  number: 9093
    # - host: api.pouchfi.com
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: pouchfi-backend
    #             port:
    #               number: 3005
    - host: db.pouchfi.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pouchfi-postgres
                port:
                  number: 5432
